- Get rid of a bunch of pixel styling which breaks the design on other screen resolutions - Fix a styling bug in note-input

--- a/ec4-v2-vue/src/assets/main.scss
+++ b/ec4-v2-vue/src/assets/main.scss
@@ -19,7 +19,7 @@ html {
 
 .matrix_font {
   font-family: 'LCD5x8', Courier, monospace;
-  font-size: 16px;
+  font-size: 0.85em;
   font-weight: bold;
 }
 
